fixed alignment of expanded menu in mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,11 @@ body {
   margin-right: 0;
   margin-top: 120px;
 }
+@media (max-width: 400px) {
+  .menu ul {
+    margin-left: 25%;
+  }
+}
 .menu .close {
   z-index: 9;
   margin-right: 44px;
