--- a/less/home.less
+++ b/less/home.less
@@ -29,6 +29,9 @@ html, body {
         margin-left: 43%;
         margin-right: 0;
         margin-top: 120px;
+        @media @mobile {
+            margin-left: 25%;
+        }
     }
     .close {
         z-index: 9;
